src/objects/mappingMetadata__c.object
<CustomObject>
    <fields>
        <fullName>DummyField__c</fullName>
        <description>Field created to update revenue property.</description>
        <label>DummyField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping Metadata</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mapping Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapping Metadata</pluralLabel>
    <recordTypes>
        <fullName>AssociatedAccount</fullName>
        <active>true</active>
        <label>AssociatedAccount</label>
    </recordTypes>
    <recordTypes>
        <fullName>AssociatedWell</fullName>
        <active>true</active>
        <label>AssociatedWell</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>